<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nave_my_images"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_myimages" />
        <item
            android:id="@+id/nav_rate"
            android:icon="@android:drawable/star_on"
            android:title="@string/rate_menu" />

        <item
            android:id="@+id/nav_share"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/share_text" />

        <item
            android:id="@+id/nav_more_apps"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/more_apps" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/feedback"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/feedback" />

            <item
                android:id="@+id/nav_privacy"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/privacy_text" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_exit" />
        </menu>
    </item>

</menu>
